kubernetes/media/samba.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
spec:
  selector:
    matchLabels:
      app: samba
  template:
    metadata:
      labels:
        app: samba
    spec:
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-downloads
        - name: config
          configMap:
            name: samba-config
      containers:
        - name: samba
          image: ghcr.io/crazy-max/samba:4.18.2
          ports:
            - name: smb
              containerPort: 445
          volumeMounts:
            - mountPath: /media/data
              name: media
            - mountPath: /data/config.yml
              name: config
              subPath: config.yml

---
apiVersion: v1
kind: Service
metadata:
  name: samba
spec:
  type: NodePort
  ports:
    - port: 445
      name: smb
      targetPort: smb
      nodePort: 30000
  selector:
    app: samba
