kubernetes/media/calibre-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
spec:
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
        - name: media
          persistentVolumeClaim:
            claimName: media-downloads
      containers:
        - name: calibre-web
          image: linuxserver/calibre-web:0.6.21-ls236
          ports:
            - name: http
              containerPort: 8083
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: calibre-web
            - mountPath: /books
              name: media
              subPath: all/books

---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: calibre-web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: calibre.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: calibre-web
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-basic-auth@kubernetescrd
spec:
  rules:
    - host: calibre-basic.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: calibre-web
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web-local
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "1001" # overwrite default https redirect
spec:
  rules:
    - host: calibre.fritz.box
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: calibre-web
                port:
                  name: http
    - host: calibre.10.0.0.5.sslip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: calibre-web
                port:
                  name: http
