kubernetes/media/freshrss.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
spec:
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
      containers:
        - name: freshrss
          image: linuxserver/freshrss:1.22.1-ls200
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: freshrss
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: freshrss
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-basic-auth@kubernetescrd
spec:
  rules:
    - host: freshrss-basic.oci.eduard-marbach.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: freshrss
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    #traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: freshrss.oci.eduard-marbach.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: freshrss
                port:
                  name: http
