kubernetes/media/jackett.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
        - name: media
          persistentVolumeClaim:
            claimName: media-downloads
      containers:
        - name: jackett
          image: ghcr.io/linuxserver/jackett:v0.20.2451-ls87
          ports:
            - name: http
              containerPort: 9117
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: jackett
            - mountPath: /data
              name: media

---
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: jackett

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: jackett.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jackett
                port:
                  name: http
  tls:
    - hosts:
        - jackett.linkvt.de
      secretName: jackett-certificate
