kubernetes/media/jellyseerr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:1.7.0
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - mountPath: /app/config
              name: app-data
              subPath: jellyseerr

---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: jellyseerr

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: jellyseerr.oci.eduard-marbach.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jellyseerr
                port:
                  name: http
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: jellyseerr-local
# spec:
#   storageClassName: local-path
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 1Gi
