kubernetes/media/organizr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizr
spec:
  selector:
    matchLabels:
      app: organizr
  template:
    metadata:
      labels:
        app: organizr
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
      containers:
        - name: organizr
          image: organizr/organizr:latest
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: organizr
---
apiVersion: v1
kind: Service
metadata:
  name: organizr
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: organizr

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organizr-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-basic-auth@kubernetescrd
spec:
  rules:
    - host: organizr-basic.oci.eduard-marbach.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: organizr
                port:
                  name: http
  tls:
    - hosts:
        - organizr-basic.oci.eduard-marbach.de
      secretName: organizr-basic-certificate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organizr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: organizr.oci.eduard-marbach.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: organizr
                port:
                  name: http
  tls:
    - hosts:
        - organizr.oci.eduard-marbach.de
      secretName: organizr-certificate
