kubernetes/media/plex.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
        - name: media
          persistentVolumeClaim:
            claimName: media-downloads
      containers:
        - name: plex
          image: ghcr.io/linuxserver/plex:1.32.6
          ports:
            - name: http
              containerPort: 32400
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: plex
            - mountPath: /tv
              name: media
              subPath: all/test
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: plex
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: plex.oci.eduard-marbach.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: plex
                port:
                  name: http
  tls:
    - hosts:
        - plex.oci.eduard-marbach.de
      secretName: plex-certificate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-direct
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: plex-direct.oci.eduard-marbach.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: plex
                port:
                  name: http
  tls:
    - hosts:
        - plex-direct.oci.eduard-marbach.de
      secretName: plex-direct-certificate
