kubernetes/media/prowlarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr:1.6.3.3608-ls24
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: prowlarr

---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: prowlarr

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: prowlarr.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prowlarr
                port:
                  name: http
  tls:
    - hosts:
        - prowlarr.linkvt.de
      secretName: prowlarr-certificate
