kubernetes/media/radarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
        - name: media
          persistentVolumeClaim:
            claimName: media-downloads
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:4.4.4.7068-ls172
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: radarr
            - mountPath: /data
              name: media

---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: radarr

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-basic-auth@kubernetescrd
spec:
  rules:
    - host: radarr-basic.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: radarr
                port:
                  name: http
  tls:
    - hosts:
        - radarr-basic.linkvt.de
      secretName: radarr-basic-certificate

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: radarr.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: radarr
                port:
                  name: http
  tls:
    - hosts:
        - radarr.linkvt.de
      secretName: radarr-certificate
