kubernetes/media/readarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
spec:
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
        - name: media
          persistentVolumeClaim:
            claimName: media-downloads
      containers:
        - name: readarr
          image: lscr.io/linuxserver/readarr:nightly-0.1.1.1494-ls145
          ports:
            - name: http
              containerPort: 8787
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: readarr
            - mountPath: /data
              name: media

---
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: readarr

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
spec:
  rules:
    - host: readarr.10.0.0.5.sslip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: readarr
                port:
                  name: http
