kubernetes/media/sabnzbd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
        - name: media
          persistentVolumeClaim:
            claimName: media-downloads
      containers:
        - name: sabnzbd
          image: ghcr.io/linuxserver/sabnzbd:4.0.1-ls105
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: sabnzbd
            - mountPath: /downloads
              name: media
              subPath: usenet/
            - mountPath: /incomplete-downloads
              name: media
              subPath: usenet/_incomplete

---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: sabnzbd

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-basic-auth@kubernetescrd
spec:
  rules:
    - host: sabnzbd-basic.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sabnzbd
                port:
                  name: http
  tls:
    - hosts:
        - sabnzbd-basic.linkvt.de
      secretName: sabnzbd-basic-certificate

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: sabnzbd.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sabnzbd
                port:
                  name: http
  tls:
    - hosts:
        - sabnzbd.linkvt.de
      secretName: sabnzbd-certificate
