kubernetes/media/sonarr-anime.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-anime
spec:
  selector:
    matchLabels:
      app: sonarr-anime
  template:
    metadata:
      labels:
        app: sonarr-anime
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
        - name: media
          persistentVolumeClaim:
            claimName: media-downloads
      containers:
        - name: sonarr-anime
          image: linuxserver/sonarr:4.0.1.929-ls222
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: sonarr-anime
            - mountPath: /data
              name: media

---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-anime
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: sonarr-anime

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-anime-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-basic-auth@kubernetescrd
spec:
  rules:
    - host: sonarr-anime-basic.oci.eduard-marbach.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sonarr-anime
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-anime
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: sonarr-anime.oci.eduard-marbach.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sonarr-anime
                port:
                  name: http
