kubernetes/media/sonarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: media-app-data
        - name: media
          persistentVolumeClaim:
            claimName: media-downloads
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:3.0.10.1567-ls191
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: app-data
              subPath: sonarr
            - mountPath: /data
              name: media

---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: sonarr

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-basic-auth@kubernetescrd
spec:
  rules:
    - host: sonarr-basic.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sonarr
                port:
                  name: http
  tls:
    - hosts:
        - sonarr-basic.linkvt.de
      secretName: sonarr-basic-certificate


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: sonarr.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sonarr
                port:
                  name: http
  tls:
    - hosts:
        - sonarr.linkvt.de
      secretName: sonarr-certificate
